--- a/blankbook.css
+++ b/blankbook.css
@@ -49,8 +49,30 @@ form {
   margin-bottom: -10px;
   position: relative;
 }
-
+/*
+textarea.noscrollbars {
+  overflow: hidden;
+  width: 100%;
+  height: 200px;
+}
+*/
 .write {
+  box-sizing: border-box;
+  padding: 10px 0;
+  background: transparent;
+  border: none;
+  overflow: hidden;
+  width: 100%;
+  height: 200px;
+  padding-right: 80px;
+  font-size: 1em;
+}
+
+.write textarea:focus{
+  outline: 0;
+}
+
+.new-book {
   box-sizing: border-box;
   padding: 10px 0;
   background: transparent;
@@ -60,7 +82,7 @@ form {
   font-size: 1em;
 }
 
-.write :focus{
+.new-book text:focus{
   outline: 0;
 }
 
@@ -122,6 +144,10 @@ header .hide-completed {
   }
 
   .write {
+    padding-bottom: 5px;
+  }
+    
+  .new-book {
     padding-bottom: 5px;
   }
 }
